ui of student form creating

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
 <div class="container">
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="jumbotron text-danger">
-        <i class="fa fa-user" aria-hidden="true"></i> Hello
-      </div>
-    </div>
-  </div>
+  <app-student></app-student>
 </div>
 
 
