--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -1,3 +1,10 @@
-<p>
-  student works!
-</p>
+<div class="row mt-5">
+  <div class="col-lg 12">
+    <div class="card">
+      <div class="card-header cardHeaderBg">Student Form</div>
+      <div class="card-body">
+        <h1>Form</h1>
+      </div>
+    </div>
+  </div>
+</div>
