--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -3,21 +3,83 @@
     <div class="card">
       <div class="card-header cardHeaderBg">Student Form</div>
       <div class="card-body">
-        <h1>Form</h1>
+        <form #studentForm="ngForm">
+          <div class="row">
+            <div class="col-lg-3 col-md-3 col-sm-6">
+              <div class="form-group">
+                <label for="">Name</label>
+                <input type="text" class="form-control" >
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-6">
+              <div class="form-group">
+                <label for="">Date of Birth</label>
+                <input type="date" class="form-control" >
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-6">
+              <div class="form-group">
+                <label for="">Email Address</label>
+                <input type="email" class="form-control" >
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-6">
+              <div class="form-group">
+                <label for="">Contact Number</label>
+                <input type="number" class="form-control" >
+              </div>
+            </div>
+          </div>
+          <div class="row">
+              <div class="col-lg-2 col-md-3 col-sm-3">
+                <div class="form-group">
+                  <label for="">Gender</label>
+                  <select name="" id="" class="form-control">
+                    <option *ngFor="let gen of gender" value=""> {{gen}} </option>
+                  </select>
+                </div>
+              </div>
+              <div class="col-lg-2 col-md-3 col-sm-3">
+                <div class="form-group">
+                    <label for="">Course</label>
+                    <select name="" id="" class="form-control">
+                      <option *ngFor="let course of courses" value=""> {{course}} </option>
+                    </select>
+                </div>
+              </div>
+              <div class="col-lg-2 col-md-6 col-sm-6">
+                <div class="form-group">
+                    <label for="">Course Duration</label>
+                    <select name="" id="" class="form-control">
+                      <option *ngFor="let cD of courseDur" value=""> {{ cD }} </option>
+                    </select>
+                </div>
+              </div>
+              <div class="col-lg-6 col-md-12 col-sm-12">
+                <div class="form-group">
+                    <label for="">Address</label>
+                    <textarea name="" id="" cols="30" rows="2" class="form-control"></textarea>
+                </div>
+              </div>
+          </div>
+          <div class="row d-flex justify-content-end">
+            <button class="btn btn-sm btn-success">Save Student Detail</button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
 </div>
 <div class="row mt-2">
-  <div class="col-lg-4">
+  <div class="col-lg-4 col-md-4 col-sm-4">
     <div class="card">
       <div class="card-header">All Students</div>
       <div class="card-body">
           <div class="row border m-2 pt-2" *ngFor="let student of students" (click)="studentFullDetail(student)">
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-4 col-sm-4">
               <img src="../../assets/images/avtar.jpg" alt="" class="img-fluid">
             </div>
-            <div class="col-lg-8">
+            <div class="col-lg-8 col-md-8 col-sm-8">
               <h3>{{student.name}}</h3>
               <h6>{{student.dob}}</h6>
               <h6>{{student.course}}</h6>
@@ -27,7 +89,7 @@
         </div>
     </div>
   </div>
-  <div class="col-lg-8">
+  <div class="col-lg-8 col-md-8 col-sm-8">
     <div class="card">
       <div class="card-header">View Full Detail</div>
       <div class="card-body">
